big update May 2023

--- a/index.html
+++ b/index.html
@@ -1,44 +1,54 @@
 <!DOCTYPE html>
 <html lang="en-US" xmlns="http://www.w3.org/1999/xhtml">
-
     <head>
-        <title>Patrick Jeuniaux</title>
+        <title>
+            Home
+        </title>
         <meta charset="UTF-8" />
         <link rel="shortcut icon" href="img/PPJMHJ.ico" />
-        <link rel="stylesheet" type="text/css" href="default.css" />
+        <link rel="stylesheet" type="text/css" href="css/default.css" />
     </head>
-
     <body>
-        <img src="img/Ubi_bene_ibi_patria_logo.jpg" />
-
-        <div>﻿
-
-            <h1 class = "big">Patrick P. J. M. H. Jeuniaux</h1>
-
-            <br>
-
-            <p class = "big">Profile</p>
-
-            <ul>
-
-                <li>Researcher at the <a href="https://incc.fgov.be/jeuniaux-patrick" target="_blank">National Institute of Criminalistics and Criminology (NICC)</a></li>
-
-                <li>Subjects of interest: cognition, language, computations, data analysis
-
-                </li>
-
-                <li>Publications on <a href="https://scholar.google.com/citations?user=HYwns6EAAAAJ&hl=en" target="_blank">
-                Google scholar</a>, <a href="https://www.scopus.com/authid/detail.uri?authorId=12344980300" target="_blank">SCOPUS</a>, and <a href="https://orcid.org/0000-0002-4105-2021" target="_blank">ORCID</a></li>
-
-                <li>Repositories on <a href="https://github.com/patrickjeuniaux" target="_blank">GitHub</a></li>
-            </ul>
+        <a href="index.html"><img src="img/Ubi_bene_ibi_patria_logo.jpg" /></a>
 
 
-            <p class = "big">email:</p>
 
-            <img src="img/email_PJ.png" width="50%" />
+		<ul class="site_menu">
+            <li><a href = "index.html" class = "selected">Home</a></li>
+            <li><a href = "html/publications.html">Publications</a></li>
+            <li><a href = "html/contact.html">Contact</a></li>
+            <li><a href = "html/links.html">Links</a></li>
+		</ul>
+<h1 class = "big">Patrick P.J.M.H. Jeuniaux</h1>
+<div>
+    <img src="img/PJ_portrait.png" />
 
+<p>
+    Welcome to you! This is my personal website, that of a scientist who conducts research involving psychology, language, and computers.
+</p>
+
+<p>
+    Here, you'll find some information about the academic publications I took part in. These belong to two broad categories:
+</p>
+
+<ol>
+<li>
+    <a href = "html/publications_cogsci.html">Cognitive Science</a> (experimental psychology and computational linguistics).
+</li>
+
+<li>
+    <a href = "html/publications_science_justice.html">Science & Justice</a> (forensic science and criminology).
+</li>
+</ol>
+
+<p>
+    Please feel free to <a href = "html/contact.html">contact</a> me if you would like to discuss a particular topic, or for some other reason. Perhaps I can be useful.
+</p>
+
+
+
+
+<br /><signature> — 18 May 2023</signature>
         </div>
-
     </body>
 </html>
