--- a/html/publications_cogsci.html
+++ b/html/publications_cogsci.html
@@ -36,6 +36,7 @@
 
 <br /><br /><br /><a href="https://www.springer.com/journal/10579/" target = "_blank">
 <img style="width: 151px;" alt="Language Resources and Evaluation" src="../img/language_resources_and_evaluation.jpg" /></a>
+<img style="height: 200px;" alt="Distributional Semantic Models" src="../img/DSM_2022.png" />
 <li>
 Lenci, A., Sahlgren, M., <selected_author>Jeuniaux, P.</selected_author>, Cuba Gyllensten, A., &amp; Miliani, M. (2022). A comprehensive comparative evaluation and analysis of Distributional Semantic Models. <i>Language Resources and Evaluation</i>, 56, 1269-1313. <a href="https://doi.org/10.1007/s10579-021-09575-z" target = "_blank">https://doi.org/10.1007/s10579-021-09575-z</a>
 </li>
