--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </p>
 
 <p>
-    Here, you'll find some information about the academic publications I took part in. These belong to two broad categories:
+    Here, you'll find information about the academic publications I took part in. These belong to two broad categories:
 </p>
 
 <ol>
