--- a/html/contact.html
+++ b/html/contact.html
@@ -23,7 +23,7 @@
 <br /><br />
 
 <p>
-	I invite you to write a message to my protonmail.com email address. For this, you'll need to use my first name (it starts with a 'P'), followed by my last name, optionally with a dot in between.
+	I invite you to write me a message to my protonmail.com email address. For this, you'll need to use my first name ('patrick'), followed by my last name, optionally with a dot in between.
 </p>
             <br /><signature> — 18 May 2023</signature>
         </div>
