--- a/html/links.html
+++ b/html/links.html
@@ -33,16 +33,23 @@
                 </li>
 
                 <li>
-                    <a href="https://orcid.org/0000-0002-4105-2021" target="_blank">https://orcid.org/</a> (ORCID : Open Researcher and Contributor ID)
+                    <a href="https://orcid.org/0000-0002-4105-2021" target="_blank">https://orcid.org</a> (ORCID : Open Researcher and Contributor ID)
                 </li>
 
                 <li>
-                    <a href="https://github.com/patrickjeuniaux" target="_blank">https://github.com/</a> (GitHub : Git distributed version control Internet repository)
+                    <a href="https://github.com/patrickjeuniaux" target="_blank">https://github.com</a> (GitHub : Git distributed version control Internet repository)
                 </li>               
                 
                 <li>
-                    <a href="https://incc.fgov.be/jeuniaux-patrick" target="_blank">https://incc.fgov.be/</a> (NICC : National Institute of Criminalistics and Criminology)
+                    <a href="https://incc.fgov.be/jeuniaux-patrick" target="_blank">https://incc.fgov.be</a> (NICC : National Institute of Criminalistics and Criminology)
                 </li>
+
+
+                <li>
+                    <a href="https://www.facebook.com/patrick.jeuniaux/" target="_blank">https://www.facebook.com</a> (Facebook)
+                </li>
+
+
                 
             </ul>
 
