--- a/html/links.html
+++ b/html/links.html
@@ -25,28 +25,28 @@
             <ul>
 
                 <li>
-                    <a href="https://scholar.google.com/citations?user=HYwns6EAAAAJ&hl=en" target="_blank">https://scholar.google.com</a> (Google scholar : indexed scholarly literature)
+                    <a href="https://scholar.google.com/citations?user=HYwns6EAAAAJ" target="_blank">https://scholar.google.com/citations?user=HYwns6EAAAAJ</a> (Google scholar : indexed scholarly literature)
                 </li>
 
                 <li>
-                    <a href="https://www.scopus.com/authid/detail.uri?authorId=12344980300" target="_blank">https://www.scopus.com</a> (SCOPUS : Elsevier's abstract and citation database)
+                    <a href="https://www.scopus.com/authid/detail.uri?authorId=12344980300" target="_blank"https://www.scopus.com/authid/detail.uri?authorId=12344980300</a> (SCOPUS : Elsevier's abstract and citation database)
                 </li>
 
                 <li>
-                    <a href="https://orcid.org/0000-0002-4105-2021" target="_blank">https://orcid.org</a> (ORCID : Open Researcher and Contributor ID)
+                    <a href="https://orcid.org/0000-0002-4105-2021" target="_blank">https://orcid.org/0000-0002-4105-2021</a> (ORCID : Open Researcher and Contributor ID)
                 </li>
 
                 <li>
-                    <a href="https://github.com/patrickjeuniaux" target="_blank">https://github.com</a> (GitHub : Git distributed version control Internet repository)
+                    <a href="https://github.com/patrickjeuniaux" target="_blank">https://github.com/patrickjeuniaux</a> (GitHub : Git distributed version control Internet repository)
                 </li>               
                 
                 <li>
-                    <a href="https://incc.fgov.be/jeuniaux-patrick" target="_blank">https://incc.fgov.be</a> (NICC : National Institute of Criminalistics and Criminology)
+                    <a href="https://incc.fgov.be/jeuniaux-patrick" target="_blank">https://incc.fgov.be/jeuniaux-patrick</a> (NICC : National Institute of Criminalistics and Criminology)
                 </li>
 
 
                 <li>
-                    <a href="https://www.facebook.com/patrick.jeuniaux/" target="_blank">https://www.facebook.com</a> (Facebook)
+                    <a href="https://www.facebook.com/patrick.jeuniaux/" target="_blank">https://www.facebook.com/patrick.jeuniaux/</a> (my Facebook page)
                 </li>
 
 
