--- a/html/links.html
+++ b/html/links.html
@@ -29,7 +29,7 @@
                 </li>
 
                 <li>
-                    <a href="https://www.scopus.com/authid/detail.uri?authorId=12344980300" target="_blank"https://www.scopus.com/authid/detail.uri?authorId=12344980300</a> (SCOPUS : Elsevier's abstract and citation database)
+                    <a href="https://www.scopus.com/authid/detail.uri?authorId=12344980300" target="_blank">https://www.scopus.com/authid/detail.uri?authorId=12344980300</a> (SCOPUS : Elsevier's abstract and citation database)
                 </li>
 
                 <li>
