correct some formulations

--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
 </p>
 
 <ol>
-<li>
-    <a href = "html/publications_cogsci.html">Cognitive Science</a> (experimental psychology and computational linguistics).
-</li>
+    <li>
+        <a href = "html/publications_cogsci.html">Cognitive Science</a> (experimental psychology and computational linguistics).
+    </li>
 
-<li>
-    <a href = "html/publications_science_justice.html">Science & Justice</a> (forensic science and criminology).
-</li>
+    <li>
+        <a href = "html/publications_science_justice.html">Science & Justice</a> (forensic science and criminology).
+    </li>
 </ol>
 
 <p>
-    Please feel free to <a href = "html/contact.html">contact</a> me if you would like to discuss a particular topic, or for some other reason. Perhaps I can be useful.
+    Please feel free to <a href = "html/contact.html">contact</a> me.
 </p>
 
 
