correct some links

--- a/html/publications_cogsci.html
+++ b/html/publications_cogsci.html
@@ -55,7 +55,7 @@ Tremblay, S., Gagnon, J.-F., Lafond, D., Hodgetts, H. M., Doiron, M., &amp; <sel
 
 
 
-<br /><br /><br /><a href="http://www.cognitivesciencesociety.org/journal_csj.html" target = "_blank">
+<br /><br /><br /><a href="https://cognitivesciencesociety.org/cognitive-science-journal/" target = "_blank">
 <img style="width: 151px;" alt="Cognitive Science" src="../img/Cognitive_Science_journal.jpg" /></a>
 <li>
 Louwerse, M. M., Dale, R., Bard, E. G., &amp; <selected_author>Jeuniaux, P.</selected_author> (2012). Behavior matching in multimodal communication is synchronized. <i>Cognitive Science</i>. 1-23. <a href="http://doi.org/10.1111/j.1551-6709.2012.01269.x" target = "_blank">http://doi.org/10.1111/j.1551-6709.2012.01269.x</a>
@@ -73,11 +73,11 @@ Louwerse, M. M., &amp; <selected_author>Jeuniaux, P.</selected_author> (2010). T
 
 
 
-<br /><br /><br /><a href="http://studia.complexica.net" target = "_blank">
+<br /><br /><br /><a href="https://dblp.org/db/journals/siu/siu8.html" target = "_blank">
 <img style="width: 151px;" alt="Studia Informatica Universalis" src="../img/Studia_Informatica_Universalis.jpg" /></a>
 
 <li>
-Bellissens, C., <selected_author>Jeuniaux, P.</selected_author>, Duran, N. D., &amp; McNamara, D. S. (2010). A text relatedness and dependency computational model: Using Latent Semantic Analysis and Coh-Metrix to predict self-explanation quality. <i>Studia Informatica Universalis</i>, 8, 85-125.
+Bellissens, C., <selected_author>Jeuniaux, P.</selected_author>, Duran, N. D., &amp; McNamara, D. S. (2010). A text relatedness and dependency computational model: Using Latent Semantic Analysis and Coh-Metrix to predict self-explanation quality. <i>Studia Informatica Universalis</i>, 8 (1), 85-125. <a href="https://dblp.org/db/journals/siu/siu8.html" target = "_blank">https://dblp.org</a>
 </li>
 
 
