--- a/html/contact.html
+++ b/html/contact.html
@@ -23,7 +23,7 @@
 <br /><br />
 
 <p>
-	I invite you to write me a message to my protonmail.com email address, using my first name ('patrick'), followed by my last name, optionally with a dot in between.
+	You are welcome to email me at <a href = "mailto: patrick.jeuniaux@protonmail.com">patrick.jeuniaux@protonmail.com</a>.
 </p>
             <br /><signature> — 18 May 2023</signature>
         </div>
