--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <img src="img/PJ_portrait.png" />
 
 <p>
-    Welcome to you! This is my personal website, that of a scientist who conducts research involving psychology, language, and computers.
+    Welcome! This is my personal website, that of a scientist who conducts research involving psychology, language, and computers.
 </p>
 
 <p>
