--- a/html/publications_science_justice.html
+++ b/html/publications_science_justice.html
@@ -7,8 +7,9 @@
         <meta charset="UTF-8" />
         <link rel="shortcut icon" href="../img/PPJMHJ.ico" />
         <link rel="stylesheet" type="text/css" href="../css/default.css" />
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     </head>
-    <body>
+    <body class="w3-container w3-auto w3-section w3-mobile">
         <a href="../index.html">
             <img src="../img/Ubi_bene_ibi_patria_logo.jpg" />
         </a>
