--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-US" xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>
-            Home
-        </title>
+        <title>Home</title>
         <meta charset="UTF-8" />
         <link rel="shortcut icon" href="img/PPJMHJ.ico" />
         <link rel="stylesheet" type="text/css" href="css/default.css" />
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     </head>
-    <body>
+    <body class="w3-container w3-auto w3-section w3-mobile">
         <a href="index.html"><img src="img/Ubi_bene_ibi_patria_logo.jpg" /></a>
 
 
