--- a/html/publications_science_justice.html
+++ b/html/publications_science_justice.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     </head>
     <body class="w3-container w3-auto w3-section w3-mobile">
-        <a href="../index.html">
+        <a href="ubi_bene_ibi_patria.html">
             <img src="../img/Ubi_bene_ibi_patria_logo.jpg" />
         </a>
 		<ul class="site_menu">
