--- a/html/ubi_bene_ibi_patria.html
+++ b/html/ubi_bene_ibi_patria.html
@@ -105,7 +105,7 @@
 
 <p class = "big">Acknowledgement</p>
 
-<p>For the translation, I want to thank Marc, Ehsan, Alma, Ibrahim, Léo, Mamadou, Catherine, Aramaan, François, Benjamin, Henrique, Claire-Bénédicte, Natalia, Macha, Michel and the numerous anonymous translators whose contribution has been found on the Web.</p>
+<p>For the translation, I want to thank Marc, Ehsan, Alma, Ibrahim, Léo, Mamadou, Catherine, Armaan, François, Benjamin, Henrique, Claire-Bénédicte, Natalia, Macha, Michel and the numerous anonymous translators whose contribution has been found on the Web.</p>
 
 <br /><br />
 
