add Aristophanes, Cicero and Pascal Thiercy as sources

--- a/html/ubi_bene_ibi_patria.html
+++ b/html/ubi_bene_ibi_patria.html
@@ -22,17 +22,27 @@
  <div>
 
 
-<p>This Latin  motto litteraly means <i>Where (you are) well, there (is your) fatherland</i>.</p>
+<p>This Latin motto, found in the garden of Erasmus house in Anderlecht, litteraly means <i>Where (you are) well, there (is your) fatherland</i>.</p>
+
+<p>According to Pascal Thiercy, this verse is taken from a tragedy.</p>
+
+<p>We found it in a dialog between Cario and Hermes, in the verse 1151 of <i>Ploutos</i>, a comedy written by Aristophanes. </p>
+
+<ul>
+    <li>Cario : So, you're leaving the gods behind and staying here?</li>
+    <li>Hermes : It's just that your place is much better.</li>
+    <li>Cario : Then what? Changing sides, you think that's beautiful?</li>
+    <li>Hermes : "Homeland is wherever you feel good."</li>
+</ul>
 
 <p>It is similar to a variety of expressions, some of which are discussed by Erasmus of Rotterdam in his comment of adage ¶ 1193:</p>
 
-<p><i>Quaevis terra patria</i> (To have the world as fatherland/motherland).</p>
-
-<p><i>Ellic enim patria est, ubi tibi sit bene</i> (Where you are well, there really is your fatherland).</p>
-
-<p><i>Patria est, ubicumque est bene</i> (Fatherland is where you feel good).</p>
-
-<p><i>Solum omne patria, prospere quicumque agit</i> (Whoever has a prosperous life, has any land as fatherland).</p>
+<ul>
+    <li><i>Quaevis terra patria</i> (To have the world as fatherland/motherland).</li>
+    <li><i>Ellic enim patria est, ubi tibi sit bene</i> (Where you are well, there really is your fatherland).</li>
+    <li><i>Patria est, ubicumque est bene</i> (Fatherland is where you feel good) [As said by Tuecer in the Tusculanae Disputationes by Cicero.]</li>
+    <li><i>Solum omne patria, prospere quicumque agit</i> (Whoever has a prosperous life, has any land as fatherland).</li>
+</ul>
 
 <h2 class = "big">Translations in multiple languages</h1>
 
