improve explanation of the adage by relying on Erasmus writing

--- a/html/ubi_bene_ibi_patria.html
+++ b/html/ubi_bene_ibi_patria.html
@@ -22,26 +22,36 @@
  <div>
 
 
-<p>This Latin motto, found in the garden of Erasmus house in Anderlecht, litteraly means <i>Where (you are) well, there (is your) fatherland</i>.</p>
+<p>
+The photo at the top of this page was taken in the philosophical garden of the Erasmus House in Anderlecht.
 
-<p>According to Pascal Thiercy, this verse is taken from a tragedy.</p>
+It features almond-shaped ponds designed by Belgian artist Marie-Jo Lafontaine.
 
-<p>We found it in a dialog between Cario and Hermes, in the verse 1151 of <i>Ploutos</i>, a comedy written by Aristophanes. </p>
+Latin mottoes in bronze letters appear on the surface of the water.
+
+<i>Ubi bene, ibi patria</i>, litteraly means <i>Where you are well, there is your fatherland</i>.
+
+</p>
+
+<h2 class = "big">Quaevis terra patria</h1>
+
+<p>
+This is the adage ¶ 1193 discussed by Erasmus of Rotterdam in <i>Adagia</i>, his large collection of adages.
+
+It litterally means <i>To have the world as your homeland</i>. Erasmus wrote that "the adage reminds us that a wise and honest man finds happiness wherever he lives".
+</p>
+
+<p>
+As it is revealed by Erasmus commentaries, it is found under different forms, for example, <i>Solum omne patria, prospere quicumque agit</i> (i.e., Whoever has a prosperous life, has any land as fatherland) or <i>Patria est, ubicumque est bene</i> (i.e., Fatherland is where you feel good), as said by Tuecer in the Tusculanae Disputationes of Cicero.
+</p>
+
+<p>The form <i>Ellic enim patria est, ubi tibi sit bene</i> appears in a dialog between Cario and Hermes, in the verse 1151 of <i>Ploutos</i>, a comedy written by Aristophanes.</p>
 
 <ul>
     <li>Cario : So, you're leaving the gods behind and staying here?</li>
     <li>Hermes : It's just that your place is much better.</li>
     <li>Cario : Then what? Changing sides, you think that's beautiful?</li>
     <li>Hermes : "Homeland is wherever you feel good."</li>
-</ul>
-
-<p>It is similar to a variety of expressions, some of which are discussed by Erasmus of Rotterdam in his comment of adage ¶ 1193:</p>
-
-<ul>
-    <li><i>Quaevis terra patria</i> (To have the world as fatherland/motherland).</li>
-    <li><i>Ellic enim patria est, ubi tibi sit bene</i> (Where you are well, there really is your fatherland).</li>
-    <li><i>Patria est, ubicumque est bene</i> (Fatherland is where you feel good) [As said by Tuecer in the Tusculanae Disputationes by Cicero.]</li>
-    <li><i>Solum omne patria, prospere quicumque agit</i> (Whoever has a prosperous life, has any land as fatherland).</li>
 </ul>
 
 <h2 class = "big">Translations in multiple languages</h1>
@@ -112,7 +122,7 @@
 
 <p class = "big">Acknowledgement</p>
 
-<p>For the translation, I want to thank Marc, Ehsan, Alma, Ibrahim, Léo, Mamadou, Catherine, Armaan, François, Benjamin, Henrique, Claire-Bénédicte, Natalia, Macha, Michel and the numerous anonymous translators whose contribution has been found on the Web.</p>
+<p>For the translations, I want to thank Marc, Ehsan, Alma, Ibrahim, Léo, Mamadou, Catherine, Armaan, François, Benjamin, Henrique, Claire-Bénédicte, Natalia, Macha, Michel and the numerous anonymous translators whose contribution has been found on the Web.</p>
 
 <br /><br />
 
