precisions regarding the presence of the different versions of the adage

--- a/html/ubi_bene_ibi_patria.html
+++ b/html/ubi_bene_ibi_patria.html
@@ -27,25 +27,25 @@ The photo at the top of this page was taken in the philosophical garden of the E
 
 It features almond-shaped ponds designed by Belgian artist Marie-Jo Lafontaine.
 
-Latin mottoes in bronze letters appear on the surface of the water.
+Latin mottoes in bronze letters appear on their surface.
 
-<i>Ubi bene, ibi patria</i>, litteraly means <i>Where you are well, there is your fatherland</i>.
+<i>Ubi bene, ibi patria</i> litteraly means <i>Where you are well, there is your fatherland</i>.
 
 </p>
 
 <h2 class = "big">Quaevis terra patria</h1>
 
 <p>
-This is the adage ¶ 1193 discussed by Erasmus of Rotterdam in <i>Adagia</i>, his large collection of adages.
+Similar to the first adage we find <i>Quaevis terra patria</i>. This is the adage ¶ 1193 discussed by Erasmus of Rotterdam in <i>Adagia</i>, his large collection of adages.
 
 It litterally means <i>To have the world as your homeland</i>. Erasmus wrote that "the adage reminds us that a wise and honest man finds happiness wherever he lives".
 </p>
 
 <p>
-As it is revealed by Erasmus commentaries, it is found under different forms, for example, <i>Solum omne patria, prospere quicumque agit</i> (i.e., Whoever has a prosperous life, has any land as fatherland) or <i>Patria est, ubicumque est bene</i> (i.e., Fatherland is where you feel good), as said by Tuecer in the Tusculanae Disputationes of Cicero.
+In his commentary, Erasmus mentions other related statements, such as <i>Solum omne patria, prospere quicumque agit</i> (i.e., Whoever has a prosperous life, has any land as fatherland) and <i>Patria est, ubicumque est bene</i> (i.e., Fatherland is where you feel good), as said by Tuecer in the Tusculanae Disputationes of Cicero.
 </p>
 
-<p>The form <i>Ellic enim patria est, ubi tibi sit bene</i> appears in a dialog between Cario and Hermes, in the verse 1151 of <i>Ploutos</i>, a comedy written by Aristophanes.</p>
+<p>The statement <i>Ellic enim patria est, ubi tibi sit bene</i> appears in a dialog between Cario and Hermes, in the verse 1151 of <i>Ploutos</i>, a comedy written by Aristophanes.</p>
 
 <ul>
     <li>Cario : So, you're leaving the gods behind and staying here?</li>
@@ -122,12 +122,12 @@ As it is revealed by Erasmus commentaries, it is found under different forms, fo
 
 <p class = "big">Acknowledgement</p>
 
-<p>For the translations, I want to thank Marc, Ehsan, Alma, Ibrahim, Léo, Mamadou, Catherine, Armaan, François, Benjamin, Henrique, Claire-Bénédicte, Natalia, Macha, Michel and the numerous anonymous translators whose contribution has been found on the Web.</p>
+<p>For the translations, I want to thank Marc, Ehsan, Alma, Ibrahim, Léo, Mamadou, Catherine, Armaan, François, Benjamin, Henrique, Claire-Bénédicte, Natalia, Macha, Michel and the numerous anonymous translators whose contributions have been found on the Web.</p>
 
 <br /><br />
 
 
-            <br /><signature> — 18 May 2023</signature>
+            <br /><signature> — 31 May 2023</signature>
         </div>
     </body>
 </html>
