authors' name in alphabetical order

--- a/html/ubi_bene_ibi_patria.html
+++ b/html/ubi_bene_ibi_patria.html
@@ -122,7 +122,7 @@ In his commentary, Erasmus mentions other related statements, such as <i>Solum o
 
 <p class = "big">Acknowledgement</p>
 
-<p>For the translations, I want to thank Marc, Ehsan, Alma, Ibrahim, Léo, Mamadou, Catherine, Armaan, François, Benjamin, Henrique, Claire-Bénédicte, Natalia, Macha, Michel and the numerous anonymous translators whose contributions have been found on the Web.</p>
+<p>For the translations, I want to thank Alma, Armaan, Benjamin, Catherine, Claire-Bénédicte, Ehsan, François, Henrique, Ibrahim, Léo, Macha, Mamadou, Marc, Michel, Natalia and the numerous anonymous translators whose contributions have been found on the Web.</p>
 
 <br /><br />
 
