remodelling of publications structure

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 		<ul class="site_menu">
             <li><a href = "index.html" class = "selected">Home</a></li>
-            <li><a href = "html/publications.html">Publications</a></li>
+            <li><a href = "html/publications/index.html">Publications</a></li>
             <li><a href = "html/contact.html">Contact</a></li>
             <li><a href = "html/links.html">Links</a></li>
 		</ul>
