--- a/html/404.html
+++ b/html/404.html
@@ -13,7 +13,7 @@
         <a href="ubi_bene_ibi_patria.html"><img src="../img/Ubi_bene_ibi_patria_logo.jpg" /></a>
 		<ul class="site_menu">
             <li><a href = "../index.html">Home</a></li>
-            <li><a href = "publications.html">Publications</a></li>
+            <li><a href = "publications/index.html">Publications</a></li>
             <li><a href = "contact.html">Contact</a></li>
             <li><a href = "links.html">Links</a></li>
 		</ul>
