--- a/html/links.html
+++ b/html/links.html
@@ -14,7 +14,7 @@
 
 		<ul class="site_menu">
             <li><a href = "../index.html">Home</a></li>
-            <li><a href = "publications.html">Publications</a></li>
+            <li><a href = "publications/index.html">Publications</a></li>
             <li><a href = "contact.html">Contact</a></li>
             <li><a href = "links.html" class = "selected">Links</a></li>
 		</ul>
