correction of links in index page

--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
 </p>
 
 <p>
-    Here, you'll find information about the academic publications I took part in. These belong to two broad categories:
+    Here, you'll find information about the academic <a href = "html/publications/index.html">publications</a> I took part in. These belong to two broad categories:
 </p>
 
 <ol>
     <li>
-        <a href = "html/publications_cogsci.html">Cognitive Science</a> (experimental psychology and computational linguistics).
+        <a href = "html/publications/cog_sci/index.html">Cognitive Science</a> (experimental psychology and computational linguistics).
     </li>
 
     <li>
-        <a href = "html/publications_science_justice.html">Science & Justice</a> (forensic science and criminology).
+        <a href = "html/publications/science_justice/index.html">Science & Justice</a> (forensic science and criminology).
     </li>
 </ol>
 
