added forthcoming reports

--- a/html/publications/science_justice/technical_report.html
+++ b/html/publications/science_justice/technical_report.html
@@ -37,6 +37,18 @@
             <ol reversed="reversed">
 
 
+                <br /><br /><a href="https://incc.fgov.be/" target = "_blank">
+                <img style="width: 151px;" alt="" src="../../../img/NICC_INCC.jpg" /></a>
+                <li>
+                    Maes, E., Mine, B. & <selected_author>Jeuniaux, P.</selected_author>, Sarief, S., Huynen, P., & Robert, L. (forthcoming). SIDIS-Griffie databank. <i>Technical report</i>. National Institute for Criminalistics and Criminology, Operational Directorate Criminology. <a href="https://incc.fgov.be" target = "_blank">https://incc.fgov.be</a>
+                </li>
+
+                    
+                <br /><br /><a href="https://incc.fgov.be/" target = "_blank">
+                <img style="width: 151px;" alt="" src="../../../img/NICC_INCC.jpg" /></a>
+                <li>
+                    Huynen, P. & <selected_author>Jeuniaux, P.</selected_author>, Mine, B., Maes, E., & Robert, L. (forthcoming). La base de données du Casier judiciaire central. <i>Technical report</i>. National Institute for Criminalistics and Criminology, Operational Directorate Criminology. <a href="https://incc.fgov.be" target = "_blank">https://incc.fgov.be</a>
+                </li>
 
                 <br /><br /><a href="https://incc.fgov.be/les-parcours-socio-judiciaires-des-returnees-en-belgique-etat-des-lieux-des-acteurs-impliques-et-des" target = "_blank">
                 <img style="width: 151px;" alt="" src="../../../img/NICC_INCC.jpg" /></a>
