reference to information systems

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <img src="img/PJ_portrait.png" />
 
 <p>
-    Welcome! This is my personal website, that of a scientist who conducts research involving psychology, language, and computers.
+    Hello! Welcome to my personal website. I am a scientist working on information systems (i.e., I am interested by psychology, language, and computers).
 </p>
 
 <p>
-    Here, you'll find information about the academic <a href = "html/publications/index.html">publications</a> I took part in. These belong to two broad categories:
+    Here, you'll find references to the academic <a href = "html/publications/index.html">publications</a> I took part in. These belong to two broad categories:
 </p>
 
 <ol>
