--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <img src="img/PJ_portrait.png" />
 
 <p>
-    Hello! Welcome to my personal website. I am a scientist working on information systems (i.e., I am interested by psychology, language, and computers).
+    Hello! Welcome to my personal website. I am a scientist working on information systems. For instance, at the moment I develop a computer system to facilitate the integration of data originating from different criminal justice databases. In general, I am interested by computers, psychology, language and mathematics.
 </p>
 
 <p>
@@ -47,7 +47,7 @@
 
 
 
-<br /><signature> — 18 May 2023</signature>
+<br /><signature> — 9 September 2023</signature>
         </div>
     </body>
 </html>
