--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
     <img src="img/PJ_portrait.png" />
 
 <p>
-    Hello! Welcome to my personal website. I am a scientist working on information systems. For instance, at the moment I develop a computer system to facilitate the integration of data originating from different criminal justice databases. In general, I am interested by computers, psychology, language and mathematics.
+    Hello! Welcome to my personal website. I am a scientist working on information systems. 
+</p>
+
+<p>
+    For instance, at the moment I develop a computer system to facilitate the integration of data originating from different criminal justice databases. In general, I am interested by computers, psychology, language and mathematics.
 </p>
 
 <p>
