--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </p>
 
 <p>
-    For instance, at the moment I develop a computer system to facilitate the integration of data originating from different criminal justice databases. In general, I am interested by computers, psychology, language and mathematics.
+    For instance, at the moment, I am developping a computer system to facilitate the integration of data originating from different criminal justice databases. In general, I am interested by computers, psychology, language and mathematics.
 </p>
 
 <p>
