--- a/html/links.html
+++ b/html/links.html
@@ -15,6 +15,7 @@
 		<ul class="site_menu">
             <li><a href = "../index.html">Home</a></li>
             <li><a href = "publications/index.html">Publications</a></li>
+            <li><a href = "institutions/index.html">Institutions</a></li>
             <li><a href = "contact.html">Contact</a></li>
             <li><a href = "links.html" class = "selected">Links</a></li>
 		</ul>
@@ -55,7 +56,7 @@
             </ul>
 
 </p>
-            <br /><signature> — 18 May 2023</signature>
+            <br /><signature> — 16 September 2023</signature>
         </div>
     </body>
 </html>
