--- a/html/publications/cog_sci/index.html
+++ b/html/publications/cog_sci/index.html
@@ -16,6 +16,7 @@
 		<ul class="site_menu">
             <li><a href = "../../../index.html">Home</a></li>
             <li><a href = "../index.html" class = "selected">Publications</a></li>
+            <li><a href = "../../institutions/index.html">Institutions</a></li>
             <li><a href = "../../contact.html">Contact</a></li>
             <li><a href = "../../links.html">Links</a></li>
 		</ul>
@@ -96,6 +97,9 @@
                 Tremblay, S., <selected_author>Jeuniaux, P.</selected_author>, Romano, P., Lowe, J., &amp; Grenier, R. (2011). A multi perspective approach to the evaluation of a portable situation awareness support system in a simulated infantry operation environment. <i>2011 IEEE International Multi-Disciplinary Conference on Cognitive Methods in Situation Awareness and Decision Support (CogSIMA 2011)</i>. <a href="http://doi.org/10.1109/COGSIMA.2011.5753429" target = "_blank">http://doi.org/10.1109/COGSIMA.2011.5753429</a>
                 </li>
 
+
+
+                
                 <br /><br /><br /><a href="http://www.journals.elsevier.com/cognition/" target = "_blank">
                 <img style="width: 151px;" alt="Cognition" src="../../../img/Cognition_journal.jpg" /></a>
                 <li>
@@ -269,7 +273,7 @@
 
             </ol>
         
-            <br /><signature> — 18 May 2023</signature>
+            <br /><signature> — 16 September 2023</signature>
 
         </div>
 
