--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<ul class="site_menu">
             <li><a href = "index.html" class = "selected">Home</a></li>
             <li><a href = "html/publications/index.html">Publications</a></li>
+            <li><a href = "html/institutions/index.html">Institutions</a></li>
             <li><a href = "html/contact.html">Contact</a></li>
             <li><a href = "html/links.html">Links</a></li>
 		</ul>
@@ -51,7 +52,7 @@
 
 
 
-<br /><signature> — 9 September 2023</signature>
+<br /><signature> — 16 September 2023</signature>
         </div>
     </body>
 </html>
