--- a/html/404.html
+++ b/html/404.html
@@ -14,6 +14,7 @@
 		<ul class="site_menu">
             <li><a href = "../index.html">Home</a></li>
             <li><a href = "publications/index.html">Publications</a></li>
+            <li><a href = "institutions/index.html">Institutions</a></li>
             <li><a href = "contact.html">Contact</a></li>
             <li><a href = "links.html">Links</a></li>
 		</ul>
@@ -22,7 +23,7 @@
 	<div>﻿
 
 
-            <br /><signature> — 18 May 2023</signature>
+            <br /><signature> — 16 September 2023</signature>
         </div>
     </body>
 </html>
