--- a/html/410.html
+++ b/html/410.html
@@ -14,12 +14,13 @@
 		<ul class="site_menu">
             <li><a href = "../index.html">Home</a></li>
             <li><a href = "publications/index.html">Publications</a></li>
+            <li><a href = "institutions/index.html">Institutions</a></li>
             <li><a href = "contact.html">Contact</a></li>
             <li><a href = "links.html">Links</a></li>
 		</ul>
 		<h1 class = "big">Error 410 : <error>this file does not exist anymore</error></h1>
 	<div>﻿
-            <br /><signature> — 18 May 2023</signature>
+            <br /><signature> — 16 September 2023</signature>
         </div>
     </body>
 </html>
