--- a/html/contact.html
+++ b/html/contact.html
@@ -15,6 +15,7 @@
 		<ul class="site_menu">
             <li><a href = "../index.html">Home</a></li>
             <li><a href = "publications/index.html">Publications</a></li>
+            <li><a href = "institutions/index.html">Institutions</a></li>
             <li><a href = "contact.html" class = "selected">Contact</a></li>
             <li><a href = "links.html">Links</a></li>
 		</ul>
@@ -26,7 +27,7 @@
 <p>
 	You are welcome to email me at <a href = "mailto: patrick.jeuniaux@protonmail.com">patrick.jeuniaux@protonmail.com</a>.
 </p>
-            <br /><signature> — 18 May 2023</signature>
+            <br /><signature> — 16 September 2023</signature>
         </div>
     </body>
 </html>
