--- a/html/publications/science_justice/book_chapter.html
+++ b/html/publications/science_justice/book_chapter.html
@@ -16,6 +16,7 @@
 		<ul class="site_menu">
             <li><a href = "../../../index.html">Home</a></li>
             <li><a href = "../index.html" class = "selected">Publications</a></li>
+            <li><a href = "../../institutions/index.html">Institutions</a></li>
             <li><a href = "../../contact.html">Contact</a></li>
             <li><a href = "../../links.html">Links</a></li>
 		</ul>
@@ -55,7 +56,7 @@
             </ol>
 
 
-            <br /><signature> — 21 July 2023</signature>
+            <br /><signature> — 16 September 2023</signature>
         </div>
     </body>
 </html>
