--- a/html/ubi_bene_ibi_patria.html
+++ b/html/ubi_bene_ibi_patria.html
@@ -15,6 +15,7 @@
 		<ul class="site_menu">
             <li><a href = "../index.html">Home</a></li>
             <li><a href = "publications/index.html">Publications</a></li>
+            <li><a href = "institutions/index.html">Institutions</a></li>
             <li><a href = "contact.html">Contact</a></li>
             <li><a href = "links.html">Links</a></li>
 		</ul>
@@ -127,7 +128,8 @@ In his commentary, Erasmus mentions other related statements, such as <i>Solum o
 <br /><br />
 
 
-            <br /><signature> — 31 May 2023</signature>
+            <br /><signature> — 16 September 2023</signature>
         </div>
     </body>
 </html>
+16 September
