--- a/html/institutions/Belgium/KULeuven/index.html
+++ b/html/institutions/Belgium/KULeuven/index.html
@@ -48,7 +48,7 @@
             </p>
 
             <p>
-                Former research assistant at the <a href="https://www.law.kuleuven.be/citip/en/staff-members/formerstaff" target="_blank">Center for IT & IP Law (CiTiP)</a>, and the <a href="https://liir.cs.kuleuven.be/people.php" target="_blank">Language Intelligence & Information Retrieval (LIIR) lab</a>.
+                I was a research assistant in the Language Intelligence & Information Retrieval (<a href="https://liir.cs.kuleuven.be/people.php" target="_blank">LIIR</a>) laboratory of the Center for IT & IP Law (<a href="https://www.law.kuleuven.be/citip/en/staff-members/formerstaff" target="_blank">CiTiP</a>), at the <a href="https://www.kuleuven.be" target="_blank">KU Leuven</a>.
             </p>
             
 
