--- a/html/institutions/Canada/ULaval/index.html
+++ b/html/institutions/Canada/ULaval/index.html
@@ -44,7 +44,7 @@
 
 
             <p>
-                Former postdoctoral researcher in the <a href="https://www.co-dot.ulaval.ca/en" target="_blank">Cognition - Distribution - Organisation - Technologies (Co-DOT) laboratory</a> at Laval University.
+                I was a postdoctoral researcher in the Cognition - Distribution - Organisation - Technologies (<a href="https://www.co-dot.ulaval.ca/en" target="_blank">Co-DOT</a>) laboratory at Laval University (<a href="https://www.ulaval.ca" target="_blank">ULaval</a>).
             </p>
 
             <p>
