--- a/html/institutions/USA/UofM/index.html
+++ b/html/institutions/USA/UofM/index.html
@@ -48,7 +48,7 @@
 
 
             <p>
-                Former doctoral student and lecturer in the <a href="https://www.memphis.edu/iis/" target="_blank">Institute for Intelligent Systems (IIS)</a> and the <a href="https://www.memphis.edu/psychology/" target="_blank">Department of psychology</a> at the University of Memphis.
+                I was a doctoral student and a lecturer in the Institute for Intelligent Systems (<a href="https://www.memphis.edu/iis/" target="_blank">IIS</a>) and the Department of psychology (<a href="https://www.memphis.edu/psychology/" target="_blank">Psy</a>) at the University of Memphis (<a href="https://www.memphis.edu/" target="_blank">UofM</a>).
             </p>
 
             <p>
