edit index and institutions

--- a/html/institutions/USA/UofM/index.html
+++ b/html/institutions/USA/UofM/index.html
@@ -48,9 +48,13 @@
 
 
             <p>
-                I was a doctoral student and a lecturer in the Institute for Intelligent Systems (<a href="https://www.memphis.edu/iis/" target="_blank">IIS</a>) and the Department of psychology (<a href="https://www.memphis.edu/psychology/" target="_blank">Psy</a>) at the University of Memphis (<a href="https://www.memphis.edu/" target="_blank">UofM</a>).
+                I was a lecturer in the Department of psychology (<a href="https://www.memphis.edu/psychology/" target="_blank">Psy</a>) at the University of Memphis (<a href="https://www.memphis.edu/" target="_blank">UofM</a>).
             </p>
 
+            <p>
+                Before that I was a doctoral student in the Institute for Intelligent Systems (<a href="https://www.memphis.edu/iis/" target="_blank">IIS</a>), located in the FedEx Institute of Technology (<a href="https://www.memphis.edu/fedex/" target="_blank">FIT</a>).
+            </p>
+            
             <p>
                 <img alt="" src="../../../../img/Institute_for_Intelligent_Systems.jpg" />
                 
