--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
 </p>
 
 <p>
-    Here, you'll find references to the academic <a href = "html/publications/index.html">publications</a> I took part in. These belong to two broad categories:
+    Here, you'll find information about my academic activities by consulting the <a href = "html/publications/index.html">publications</a> I took part in, and the <a href = "html/institutions/index.html">institutions</a> that supported me. 
+</p>
+
+<p>
+    My research activities belong to two broad categories:
 </p>
 
 <ol>
