--- a/html/institutions/Belgium/NICC/index.html
+++ b/html/institutions/Belgium/NICC/index.html
@@ -45,7 +45,7 @@
         </p>
         
         <p>
-            I am a researcher in the criminology department (<a href="https://incc.fgov.be/jeuniaux-patrick" target="_blank">CRIM</a>) at the National Institute for Criminalistics and Criminology (<a href="https://incc.fgov.be" target="_blank">NICC</a>).
+            I am a <a href="https://incc.fgov.be/jeuniaux-patrick" target="_blank">researcher</a> in the criminology department (<a href="https://incc.fgov.be/criminologie" target="_blank">CRIM</a>) at the National Institute for Criminalistics and Criminology (<a href="https://incc.fgov.be" target="_blank">NICC</a>).
         </p>
     
         <p>
