--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </p>
 
 <p>
-    For instance, at the moment, I am developing a computer system to facilitate the integration of data originating from different criminal justice databases. In general, I am interested by computers, psychology, language and mathematics.
+    For instance, I am developing a computer system to facilitate the integration of data originating from different criminal justice databases. In general, I am interested by computers, psychology, language and mathematics.
 </p>
 
 <p>
@@ -48,6 +48,11 @@
         <a href = "html/publications/science_justice/index.html">Science & Justice</a> (forensic science and criminology).
     </li>
 </ol>
+
+<p>
+    At the moment, I am a researcher at the National Institute for Criminalistics and Criminology (<a href = "html/institutions/Belgium/NICC/index.html">NICC</a>), and a teaching assistant at <a href = "html/institutions/Belgium/UCLouvain/index.html">UCLouvain</a>.
+</p>
+
 
 <p>
     Please feel free to <a href = "html/contact.html">contact</a> me.
