--- a/html/institutions/Belgium/UCLouvain/index.html
+++ b/html/institutions/Belgium/UCLouvain/index.html
@@ -43,9 +43,9 @@
                 <h4>Place de l'Université 1 - 1348 Louvain-la-Neuve, Belgique</h4>
                 <p><a href="https://uclouvain.be" target="_blank">https://uclouvain.be</a></p>
             </p>
-
+            
             <p>
-                I am a teaching assistant in charge of supporting courses on information systems within the Louvain Research Institute in Management and Organizations (<a href="https://uclouvain.be/en/directories/patrick.jeuniaux" target="_blank">LOURIM</a>) at the Louvain School of Management (<a href="https://uclouvain.be/fr/facultes/lsm" target="_blank">LSM</a>) of <a href="https://uclouvain.be" target="_blank">UCLouvain</a>.
+                I am a <a href="https://uclouvain.be/en/directories/patrick.jeuniaux" target="_blank">teaching assistant</a> in charge of supporting courses on information systems within the Louvain Research Institute in Management and Organizations (<a href="https://uclouvain.be/en/research-institutes/lourim" target="_blank">LOURIM</a>) at the Louvain School of Management (<a href="https://uclouvain.be/fr/facultes/lsm" target="_blank">LSM</a>) of <a href="https://uclouvain.be" target="_blank">UCLouvain</a>.
             </p>
 
             <p>
