edit index, pubs and instits

--- a/html/publications/index.html
+++ b/html/publications/index.html
@@ -25,7 +25,21 @@
 		</ul>
 	<h1 class = "big">Publications</h1>
 
-        <div>
+    <div>
+
+        <p>
+            My research activities belong to two broad categories:
+        </p>
+        
+        <ul>
+            <li>
+                <a href = "cog_sci/index.html">Cognitive Science</a> (experimental psychology and computational linguistics).
+            </li>
+        
+            <li>
+                <a href = "science_justice/index.html">Science & Justice</a> (forensic science and criminology).
+            </li>
+        </ul>
 
             <ol reversed="reversed">
 
