--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href = "html/publications/index.html">Publications</a></li>
             <li><a href = "html/institutions/index.html">Institutions</a></li>
             <li><a href = "html/contact.html">Contact</a></li>
-            <li><a href = "html/links.html">Links</a></li>
+            <li><a href = "html/miscellaneous/index.html">Miscellaneous</a></li>
 		</ul>
 <h1 class = "big">Patrick P.J.M.H. Jeuniaux</h1>
 <div>
@@ -33,6 +33,11 @@
 
 <p>
     Here, you'll find information about my academic activities by consulting the <a href = "html/publications/index.html">publications</a> I took part in, and the <a href = "html/institutions/index.html">institutions</a> that supported me. 
+</p>
+
+
+<p>
+    Also, I have profiles on the following platforms: <a href = "https://scholar.google.com/citations?user=HYwns6EAAAAJ" target = "_blank">Google scholar</a>, <a href = "https://www.scopus.com/authid/detail.uri?authorId=12344980300" target = "_blank">SCOPUS</a>, <a href = "https://orcid.org/0000-0002-4105-2021" target = "_blank">ORCID</a>, <a href = "https://github.com/patrickjeuniaux" target = "_blank">github</a>, and <a href = "https://www.facebook.com/patrick.jeuniaux/" target = "_blank">Facebook</a>.
 </p>
 
 
