--- a/html/404.html
+++ b/html/404.html
@@ -16,7 +16,7 @@
             <li><a href = "publications/index.html">Publications</a></li>
             <li><a href = "institutions/index.html">Institutions</a></li>
             <li><a href = "contact.html">Contact</a></li>
-            <li><a href = "links.html">Links</a></li>
+            <li><a href = "miscellaneous/index.html">Miscellaneous</a></li>
 		</ul>
 
 	<h1 class = "big">Error 404 : <error>page not found</error></h1>
