--- a/html/contact.html
+++ b/html/contact.html
@@ -17,7 +17,7 @@
             <li><a href = "publications/index.html">Publications</a></li>
             <li><a href = "institutions/index.html">Institutions</a></li>
             <li><a href = "contact.html" class = "selected">Contact</a></li>
-            <li><a href = "links.html">Links</a></li>
+            <li><a href = "miscellaneous/index.html">Miscellaneous</a></li>
 		</ul>
         ﻿<h1 class = "big">Contact</h1>
  <div>
