--- a/html/institutions/USA/index.html
+++ b/html/institutions/USA/index.html
@@ -18,7 +18,7 @@
             <li><a href = "../../publications/index.html">Publications</a></li>
             <li><a href = "../index.html" class = "selected">Institutions</a></li>
             <li><a href = "../../contact.html">Contact</a></li>
-            <li><a href = "../../links.html">Links</a></li>
+            <li><a href = "../../miscellaneous/index.html">Miscellaneous</a></li>
 		</ul>
 		<ul class="site_menu">
             <li><a href = "../Belgium/index.html">Belgium</a></li>
