--- a/html/publications/index.html
+++ b/html/publications/index.html
@@ -17,7 +17,7 @@
             <li><a href = "index.html" class = "selected">Publications</a></li>
             <li><a href = "../institutions/index.html">Institutions</a></li>
             <li><a href = "../contact.html">Contact</a></li>
-            <li><a href = "../links.html">Links</a></li>
+            <li><a href = "../miscellaneous/index.html">Miscellaneous</a></li>
 		</ul>
 		<ul class="site_menu">
             <li><a href = "cog_sci/index.html">Cognitive Science</a></li>
