--- a/html/ubi_bene_ibi_patria.html
+++ b/html/ubi_bene_ibi_patria.html
@@ -17,7 +17,7 @@
             <li><a href = "publications/index.html">Publications</a></li>
             <li><a href = "institutions/index.html">Institutions</a></li>
             <li><a href = "contact.html">Contact</a></li>
-            <li><a href = "links.html">Links</a></li>
+            <li><a href = "miscellaneous/index.html">Miscellaneous</a></li>
 		</ul>
         <h1 class = "big">Ubi bene ibi patria</h1>
  <div>
