updated index and misc

--- a/html/miscellaneous/index.html
+++ b/html/miscellaneous/index.html
@@ -51,8 +51,19 @@
 
         <div>
 
+            <p>
+                I have profiles on the following platforms: <a href = "https://scholar.google.com/citations?user=HYwns6EAAAAJ" target = "_blank">Google scholar</a>, <a href = "https://www.scopus.com/authid/detail.uri?authorId=12344980300" target = "_blank">SCOPUS</a>, <a href = "https://orcid.org/0000-0002-4105-2021" target = "_blank">ORCID</a>, <a href = "https://github.com/patrickjeuniaux" target = "_blank">github</a>, and <a href = "https://www.facebook.com/patrick.jeuniaux/" target = "_blank">Facebook</a>.
+            </p>
+            <p>
+                As for for the rest, in this section, pieces of information (such as links to useful resources) are organized alphabetically. 
+            </p>
 
-            <br /><signature> — 16 September 2023</signature>
+            <p>
+                <i>This section is mostly empty for now, but it will evolve over time.</i>
+            </p>
+            
+
+            <br /><signature> — 17 September 2023</signature>
         </div>
     </body>
 </html>
